--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Merienda|Merriweather|Montserrat+Subrayada:400,700');
+@import url('https://fonts.googleapis.com/css?family=Merienda|Montserrat+Subrayada:400,700');
 
 body {
     background: #FFF1D3 url(../images/table-food-pic.jpg) no-repeat center top;
@@ -18,7 +18,7 @@ p {
     color: #0F1C8A;
     background-color: #FFF1D3;
     text-align: center;
-    font-family: 'Merriweather', serif;
+    font-family: Helvetica, sans-serif;
 }
 
 #slogan {
@@ -29,7 +29,7 @@ p {
 ul {
     color: #0F1C8A;
     background-color: #FFF1D3;
-    font-family: 'Merriweather', serif;
+    font-family: Helvetica, sans-serif;
     text-align: center;
     list-style: none;
     line-height: 1.5em;
