--- a/final_project/css/style.css
+++ b/final_project/css/style.css
@@ -24,6 +24,35 @@ article {
     margin: auto;
 }
 
+.details_left {
+    width: 42%;
+    height: 300px;
+    margin: 40px 30px 20px 10px;
+    padding: 0 10px 10px 10px;
+    background: #03054f;
+    border-radius: 10px;
+    float: left;
+}
+
+.details_right {
+    width: 42%;
+    height: 300px;
+    margin: 40px 10px 20px 30px;
+    padding: 0 10px 10px 10px;
+    background: #03054f;
+    border-radius: 10px;
+    float: left;
+}
+
+.form {
+    width: auto;
+    height: 50px;
+    margin: 40px 10px 20px 10px;
+    padding: 0 10px 10px 10px;
+    background: #03054f;
+    border-radius: 10px;
+}
+
 aside {
     width: 36%;
     margin-top: 20px;
@@ -220,6 +249,23 @@ ul {
     }
 }
 
+@media screen and (max-width: 850px) {
+    .details_left {
+        width: auto;
+        margin: 40px 10px 20px 10px;
+        padding: 0 10px 10px 10px;
+        float: none;
+    }
+
+    .details_right {
+        width: auto;
+        margin: 40px 10px 20px 10px;
+        padding: 0 10px 10px 10px;
+        float: none;
+    }
+}
+
+
 @media screen and (max-width: 770px) and (min-width: 640px) {
     h1 {
         font-size: 2em;
@@ -249,7 +295,7 @@ ul {
 
 @media screen and (max-width: 640px) and (min-width: 520px) {
     h1 {
-        font-size: 2.2em;
+        font-size: 2em;
     }
     article {
         padding: 20px;
@@ -268,12 +314,40 @@ ul {
 
     #contact {
         text-align: left;
-        margin-top: 40px;
+        margin-top: 20px;
     }
 
     #nav a {
         padding: 20px 30px;
         width: 100px;
+    }
+    #nav_short a {
+        padding: 10px 30px;
+        width: 100px;
+    }
+    #home a {
+        padding: 10px 5px;
+        width: 80px;
+        background-color: #FFF1D3;
+        color: #03054f;
+        border-radius: 10px;
+    }
+}
+
+@media screen and (max-width: 520px) and (min-width: 340px) {
+    #nav_short a {
+        padding: 10px 5px;
+        width: 100px;
+    }
+    #home a {
+        padding: 10px 0px;
+        width: 80px;
+        background-color: #FFF1D3;
+        color: #03054f;
+        border-radius: 10px;
+    }
+    #blank {
+        width: 10px;
     }
 }
 
@@ -315,9 +389,34 @@ ul {
         display: display;
         padding: 20px 60px;
         width: auto;
+        height: 10px;
     }
 
     #nav li {
         float: none;
+    }
+}
+
+@media screen and (max-width: 340px) {    
+    #nav_short a {
+        display: display;
+        padding: 10px 60px;
+        width: auto;
+    }
+
+    #nav_short li {
+        float: none;
+    }
+    #home a {
+        padding: 10px 10px;
+        width: auto;
+        background-color: #FFF1D3;
+        color: #03054f;
+        border-radius: 0px;
+    }
+
+    #blank {
+        width: 100%;
+        height: 0px;
     }
 }
